Fix hero-text issue on mobile devices, text would bleed off of the hero image

--- a/css/custom_stylesheet.css
+++ b/css/custom_stylesheet.css
@@ -50,7 +50,7 @@ position: relative;}
 	div.hero-small-font {font-size: 25px; text-align: left; font-weight: 400; padding-bottom: 10px;}
 	div.hero-small-sub-font {font-size: 20px; text-align: left; font-weight: 400;}
 	div.title-font {font-size: 25px; text-align: left;} 
-	div.hero-text {top:50%;left:30%;transform: translate(-30%,-50%);} 
+	div.hero-text {top:20%;left:30%;transform: translate(-30%,-20%);} 
 	div.hero-small-text {top:50%;left:20%;transform: translate(-20%,-50%);}
 	div.subtitle-font {font-size: 15px; font-weight: 600;} 
 	div.hero-image {height: 400px;}
